--- a/bannerssh.conf
+++ b/bannerssh.conf
@@ -1,4 +1,8 @@
-<p style="text-align:center"><span style=>
-<BR><font color='#ff00f7'क═══════क⊹⊱✫⊰⊹क═══════क/font>
-<BR><font color='#ff00c9'>MZX OFFICIAL </font>
-<BR><font color='#80808b'क═══════क⊹⊱✫⊰⊹क═══════क/font></p>
+<br><b><style="text-align:center";><font color="cyan"> Http://ssh.jomblovip.me<br>
+Don't share your account<br>
+Max login 2 device<br>
+Don't use torrent</font><br><br>
+┅┅┅┅┅┅┅┅┅═ ❐ ⸙ ❐ ═┅┅┅┅┅┅┅┅<br><font color="red">
+       °°grup telegram http://t.me/zx_vpn °°</font><br>
+┅┅┅┅┅┅┅┅┅═ ❐ ⸙ ❐ ═┅┅┅┅┅┅┅┅<br><br>
+<u><h4 style="text-align:center";><big><big><big>❤️❤️❤️</big></big></big>
