--- a/bannerssh.conf
+++ b/bannerssh.conf
@@ -1,8 +1,8 @@
-<br><b><style="text-align:center";><font color="cyan"> Http://ssh.jomblovip.me<br>
+<br><b><style="text-align:center";><font color="cyan"> ultrassh.net<br>
 Don't share your account<br>
 Max login 2 device<br>
 Don't use torrent</font><br><br>
 ┅┅┅┅┅┅┅┅┅═ ❐ ⸙ ❐ ═┅┅┅┅┅┅┅┅<br><font color="red">
        °°grup telegram http://t.me/zx_vpn °°</font><br>
 ┅┅┅┅┅┅┅┅┅═ ❐ ⸙ ❐ ═┅┅┅┅┅┅┅┅<br><br>
-<u><h4 style="text-align:center";><big><big><big>❤️❤️❤️</big></big></big>
+<u><h4 style="text-align:center";><big><big><big>🐉</big></big></big>
