--- a/bannerssh.conf
+++ b/bannerssh.conf
@@ -1,4 +1,4 @@
-<br><b><style="text-align:center";><font color="cyan"> ultrassh.net<br>
+<u><h4 style="text-align:center";><font color="cyan"> ultrassh.net<br>
 Don't share your account<br>
 Max login 2 device<br>
 Don't use torrent</font><br><br>
