--- a/bannerssh.conf
+++ b/bannerssh.conf
@@ -1,8 +1,8 @@
 <u><h4 style="text-align:center";><font color="cyan"> ultrassh.net<br>
 Don't share your account<br>
-Max login 2 device<br>
+Admin open resseller SSH PREMIUM pm t.me/mzx45<br>
 Don't use torrent</font><br><br>
-┅┅┅┅┅┅┅┅┅═ ❐ ⸙ ❐ ═┅┅┅┅┅┅┅┅<br><font color="red">
+┅┅┅┅┅┅┅┅┅═ ❐ ⸙ ❐ ═┅┅┅┅┅┅┅┅<br><font color="green">
        °°grup telegram http://t.me/zx_vpn °°</font><br>
 ┅┅┅┅┅┅┅┅┅═ ❐ ⸙ ❐ ═┅┅┅┅┅┅┅┅<br><br>
 <u><h4 style="text-align:center";><big><big><big>🐉</big></big></big>
