--- a/bannerssh.conf
+++ b/bannerssh.conf
@@ -1,8 +1,19 @@
-<u><h4 style="text-align:center";><font color="cyan"> ultrassh.net<br>
-Don't share your account<br>
-Admin open resseller SSH PREMIUM pm t.me/mzx45<br>
-Don't use torrent</font><br><br>
-┅┅┅┅┅┅┅┅┅═ ❐ ⸙ ❐ ═┅┅┅┅┅┅┅┅<br><font color="green">
-       °°grup telegram http://t.me/zx_vpn °°</font><br>
-┅┅┅┅┅┅┅┅┅═ ❐ ⸙ ❐ ═┅┅┅┅┅┅┅┅<br><br>
-<u><h4 style="text-align:center";><big><big><big>🐉</big></big></big>
+<b><h4 style="text-align:center";><font color='#FF0059'>[</font><font color='#FF0025'> </font><font color='#FE1300'>•</font><font color='#FF4600'>•</font><font color='#FF7200'>•</font><font color='#FE9D00'> </font><font
+ color='#FFCC00'>S</font><font color='#FBFF00'>E</font><font color='#C3FF00'>R</font><font color='#90FF00'>V</font><font color='#5DFF00'>E</font><font color='#24FF00'>R</font><font
+ color='#00FF1D'> </font><font color='#00FF57'>P</font><font color='#00FF8A'>R</font><font color='#00FFBD'>E</font><font color='#00FFF4'>M</font><font color='#00D2FF'>I</font><font color='#00A3FF'>U</font><font color='#0077FE'>M</font><font
+ color='#004BFF'> </font><font color='#001AFE'>•</font><font color='#1F00FE'>•</font><font color='#5300FF'>•</font><font color='#8600FF'> </font><font color='#BB00FF'>]</font>
+</b><br><br>
+<u><font color="green"> ULTRA-SSH</font><br>
+<font color="cyan"> Don't share  your account</font><br><font color="green"> Admin open reseller SSH PREMIUM</font><br>
+<font color="Aqua"> wa.me/6287735569812<br>
+ telegram t.me/mzx45<br>
+-No Multi login<br> 
+-No DDos<br> 
+-No Seed Torrent</font><br><br> 
+┅┅┅┅┅┅┅┅┅═ ❐ ⸙ ❐ ═┅┅┅┅┅┅┅┅<br>
+<font color="green">
+       °° group : t.me/zx_vpn °°</font><br>
+┅┅┅┅┅┅┅┅┅═ ❐ ⸙ ❐ ═┅┅┅┅┅┅┅┅<br>
+<br>
+</u><h4 style="text-align:center";><big><big><big><big><big>🐉</big> </big></big></big<
+</big>
