--- a/bannerssh.conf
+++ b/bannerssh.conf
@@ -5,7 +5,7 @@
 </b><br><br>
 <u><font color="green"> ULTRA-SSH</font><br>
 <font color="cyan"> Don't share  your account</font><br><font color="green"> Admin open reseller SSH PREMIUM</font><br>
-<font color="Aqua"> wa.me/6287735569812<br>
+<font color="Aqua"> t.me/s4ntz4x<br>
  telegram t.me/mzx45<br>
 -No Multi login<br> 
 -No DDos<br> 
